# Bomberman

./: Bomberman_Map.cpp  CMakeLists.txt  README.md  bomberman.conf  indie_studio  main.cpp
assets/: BomberMan-1.blend.x  aleat.mtl  animation.blend.x  bande.xcf  bomb.mtl  bot1.x  bot2.x  bot3.x  bot4.x  fire.mtl  font12.xml  font20.xml  justanim.x  myfont.xml  myfont3.xml  noanimation.blend.x  test.x  testanim.blend.x
include/: AElement.hpp  AI.hpp  Bomb.hpp  BombBonus.hpp  Bomberman.hpp  Bomberman_Map.hpp  Bonus.hpp  BreakableObstacle.hpp  Camera.hpp  ConfFile.hpp  CreateElement.hpp  Graphic.hpp  GroundObstacle.hpp  IElement.hpp  Intro.hpp  LifeBonus.hpp  Menu.hpp  MyEventReceiver.hpp  Object.hpp  Obstacle.hpp  Player.hpp  Player_graphic.hpp  Randmap.hpp  Saves.hpp  SpeedBonus.hpp  UnbreakableObstacle.hpp
install/: install.sh
irrlicht/: Button.cpp  Button.hpp  Graphic.cpp  Makefile  MyEventReceiver.hpp  Object.cpp  Player_graphic.cpp  la.cpp  ls  main.cpp  try.x  ubuntu_install.sh
lib/include/: AElement.hpp  Bomb.hpp  Bomberman.hpp  Bomberman_Map.hpp  Bonus.hpp  ExplosionObstacle.hpp  Graphic.hpp  IElement.hpp  Keycodes.h  NormalBomb.hpp  Obstacle.hpp  Player.hpp  Player_graphic.hpp
lib/menu/: ConfFile.cpp  ConfFile.hpp  Keycodes.h  Makefile  Menu.cpp  Menu.hpp  MenuEventReceiver.hpp  main.cpp
maps/: RANDOM  map.txt  mappp
saves/: XXX
sounds/: a.out
sources/: Saves.cpp
sources/bomb/: Bomb.cpp
sources/bomberman/: Bomberman.cpp
sources/bonus/: Bonus.cpp
sources/camera/: Camera.cpp
sources/create_elements/: CreateElement.cpp
(+11 files in other folders)
